# cyVulkanNanite

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  vcpkg_windows.bat
base/: CMakeLists.txt  Entrypoints.h  InstanceBase.cpp  InstanceBase.h  VulkanDebug.cpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanInitializers.hpp  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp  logger.cpp  logger.h  vulkanexamplebase.h
examples/: CMakeLists.txt
examples/pbrtexture/: PBRTextureBuffer.cpp  PBRTextureBuffer.h  Pipeline.cpp  Pipeline.h  main.cpp  pbrTexture.h  pbrtexture.cpp
shaders/glsl/: compileshaders.bat
shaders/glsl/pbrtexture/: culling.comp  debugQuad.frag  debugQuad.vert  depthCopy.comp  error.comp  genHiz.comp  pbrtexture.frag  pbrtexture.vert
shaders/hlsl/: culling.hlsl  genhiz.hlsl
src/: descriptorTools.cpp  descriptorTools.h  utils.cpp  utils.h  vksTools.cpp  vksTools.h
src/NaniteMesh/: BVH.h  Cluster.cpp  Cluster.h  ClusterGroup.cpp  ClusterGroup.h  Const.cpp  Const.h  NaniteInstance.cpp  NaniteInstance.h  NaniteLodMesh.cpp  NaniteLodMesh.h  NaniteMesh.cpp  NaniteMesh.h  NaniteScene.cpp  NaniteScene.h
